tests/paczka1/fuzzy1/62110991.err
Error in line 1: RKEBtD A133 23,7
Error in line 9: XmNcjH S972 96,0
Error in line 5: A133 S972 6,6
Error in line 20: XmNcjH S2N2 6,5
Error in line 21: XLC S972 95,9
Error in line 32: XmNcjH S232 28,3
Error in line 38: XLC S972 33,8
